Task2 - External img link.

--- a/exercises/Fundamentals/block_3/day_1/index.html
+++ b/exercises/Fundamentals/block_3/day_1/index.html
@@ -17,3 +17,6 @@
             <li>Ney</li>
             <li>Mika</li>
         </ul>
+        <br>
+        <img src="https://product-image.juniqe-production.juniqe.com/media/catalog/product/cache/x600/537/5/537-5-401P.jpg" alt="Símbolo da paz feito com os dedos." width="300px">
+        <br>
