Task3 - Local image link

--- a/exercises/Fundamentals/block_3/day_1/index.html
+++ b/exercises/Fundamentals/block_3/day_1/index.html
@@ -20,3 +20,4 @@
         <br>
         <img src="https://product-image.juniqe-production.juniqe.com/media/catalog/product/cache/x600/537/5/537-5-401P.jpg" alt="Símbolo da paz feito com os dedos." width="300px">
         <br>
+        <img src="./HTML_image_test.jpeg" alt="Outro símbolo de paz" width="300px">
